// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Valid Call calculateBirthChart with valid parameters 1`] = `
[
  {
    "houseNumber": 1,
    "id": 100,
    "isRetrograde": false,
    "name": "Ascendant",
    "zodiac": {
      "id": 8,
      "lord": {
        "id": 5,
        "name": "Jupiter",
      },
      "name": "Sagittarius",
    },
  },
  {
    "houseNumber": 10,
    "id": 109,
    "isRetrograde": false,
    "name": "MidHeaven",
    "zodiac": {
      "id": 6,
      "lord": {
        "id": 2,
        "name": "Venus",
      },
      "name": "Libra",
    },
  },
  {
    "houseNumber": 7,
    "id": 108,
    "isRetrograde": false,
    "name": "Descendant",
    "zodiac": {
      "id": 2,
      "lord": {
        "id": 3,
        "name": "Mercury",
      },
      "name": "Gemini",
    },
  },
  {
    "houseNumber": 4,
    "id": 107,
    "isRetrograde": false,
    "name": "Nadir",
    "zodiac": {
      "id": 0,
      "lord": {
        "id": 4,
        "name": "Mars",
      },
      "name": "Aries",
    },
  },
]
`;

exports[`Valid Call calculateBirthChart with valid parameters 2`] = `
[
  {
    "cusp": {
      "zodiac": {
        "id": 8,
        "lord": {
          "id": 5,
          "name": "Jupiter",
        },
        "name": "Sagittarius",
      },
    },
    "id": 0,
    "number": 1,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 9,
        "lord": {
          "id": 6,
          "name": "Saturn",
        },
        "name": "Capricorn",
      },
    },
    "id": 1,
    "number": 2,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 10,
        "lord": {
          "id": 6,
          "name": "Saturn",
        },
        "name": "Aquarius",
      },
    },
    "id": 2,
    "number": 3,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 0,
        "lord": {
          "id": 4,
          "name": "Mars",
        },
        "name": "Aries",
      },
    },
    "id": 3,
    "number": 4,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 1,
        "lord": {
          "id": 2,
          "name": "Venus",
        },
        "name": "Taurus",
      },
    },
    "id": 4,
    "number": 5,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 1,
        "lord": {
          "id": 2,
          "name": "Venus",
        },
        "name": "Taurus",
      },
    },
    "id": 5,
    "number": 6,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 2,
        "lord": {
          "id": 3,
          "name": "Mercury",
        },
        "name": "Gemini",
      },
    },
    "id": 6,
    "number": 7,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 3,
        "lord": {
          "id": 1,
          "name": "Moon",
        },
        "name": "Cancer",
      },
    },
    "id": 7,
    "number": 8,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 4,
        "lord": {
          "id": 0,
          "name": "Sun",
        },
        "name": "Leo",
      },
    },
    "id": 8,
    "number": 9,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 6,
        "lord": {
          "id": 2,
          "name": "Venus",
        },
        "name": "Libra",
      },
    },
    "id": 9,
    "number": 10,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 7,
        "lord": {
          "id": 4,
          "name": "Mars",
        },
        "name": "Scorpio",
      },
    },
    "id": 10,
    "number": 11,
  },
  {
    "cusp": {
      "zodiac": {
        "id": 7,
        "lord": {
          "id": 4,
          "name": "Mars",
        },
        "name": "Scorpio",
      },
    },
    "id": 11,
    "number": 12,
  },
]
`;

exports[`Valid Call calculateBirthChart with valid parameters 3`] = `
[
  {
    "houseNumber": 1,
    "id": 0,
    "isRetrograde": false,
    "name": "Sun",
    "zodiac": {
      "id": 9,
      "lord": {
        "id": 6,
        "name": "Saturn",
      },
      "name": "Capricorn",
    },
  },
  {
    "houseNumber": 11,
    "id": 1,
    "isRetrograde": false,
    "name": "Moon",
    "zodiac": {
      "id": 7,
      "lord": {
        "id": 4,
        "name": "Mars",
      },
      "name": "Scorpio",
    },
  },
  {
    "houseNumber": 1,
    "id": 2,
    "isRetrograde": false,
    "name": "Mercury",
    "zodiac": {
      "id": 9,
      "lord": {
        "id": 6,
        "name": "Saturn",
      },
      "name": "Capricorn",
    },
  },
  {
    "houseNumber": 12,
    "id": 3,
    "isRetrograde": false,
    "name": "Venus",
    "zodiac": {
      "id": 8,
      "lord": {
        "id": 5,
        "name": "Jupiter",
      },
      "name": "Sagittarius",
    },
  },
  {
    "houseNumber": 2,
    "id": 4,
    "isRetrograde": false,
    "name": "Mars",
    "zodiac": {
      "id": 10,
      "lord": {
        "id": 6,
        "name": "Saturn",
      },
      "name": "Aquarius",
    },
  },
  {
    "houseNumber": 4,
    "id": 5,
    "isRetrograde": false,
    "name": "Jupiter",
    "zodiac": {
      "id": 0,
      "lord": {
        "id": 4,
        "name": "Mars",
      },
      "name": "Aries",
    },
  },
  {
    "houseNumber": 5,
    "id": 6,
    "isRetrograde": true,
    "name": "Saturn",
    "zodiac": {
      "id": 1,
      "lord": {
        "id": 2,
        "name": "Venus",
      },
      "name": "Taurus",
    },
  },
  {
    "houseNumber": 2,
    "id": 7,
    "isRetrograde": false,
    "name": "Uranus",
    "zodiac": {
      "id": 10,
      "lord": {
        "id": 6,
        "name": "Saturn",
      },
      "name": "Aquarius",
    },
  },
  {
    "houseNumber": 2,
    "id": 8,
    "isRetrograde": false,
    "name": "Neptune",
    "zodiac": {
      "id": 10,
      "lord": {
        "id": 6,
        "name": "Saturn",
      },
      "name": "Aquarius",
    },
  },
  {
    "houseNumber": 1,
    "id": 9,
    "isRetrograde": false,
    "name": "Pluto",
    "zodiac": {
      "id": 8,
      "lord": {
        "id": 5,
        "name": "Jupiter",
      },
      "name": "Sagittarius",
    },
  },
  {
    "houseNumber": 1,
    "id": 15,
    "isRetrograde": false,
    "name": "Chiron",
    "zodiac": {
      "id": 8,
      "lord": {
        "id": 5,
        "name": "Jupiter",
      },
      "name": "Sagittarius",
    },
  },
  {
    "houseNumber": 1,
    "id": 105,
    "isRetrograde": false,
    "name": "Lilith",
    "zodiac": {
      "id": 8,
      "lord": {
        "id": 5,
        "name": "Jupiter",
      },
      "name": "Sagittarius",
    },
  },
  {
    "houseNumber": 8,
    "id": 103,
    "isRetrograde": true,
    "name": "True North Node",
    "zodiac": {
      "id": 4,
      "lord": {
        "id": 0,
        "name": "Sun",
      },
      "name": "Leo",
    },
  },
  {
    "houseNumber": 8,
    "id": 104,
    "isRetrograde": true,
    "name": "True South Node",
    "zodiac": {
      "id": 4,
      "lord": {
        "id": 0,
        "name": "Sun",
      },
      "name": "Leo",
    },
  },
]
`;

exports[`Valid Call calculateBirthChart with valid parameters 4`] = `
[
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 1,
      "name": "Moon",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 2,
      "name": "Mercury",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 3,
      "name": "Semi Square",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 4,
      "name": "Mars",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 6,
      "name": "Saturn",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 9,
      "name": "Pluto",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 15,
      "name": "Chiron",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 8,
      "name": "Quincunx",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 6,
      "name": "Saturn",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 9,
      "name": "Pluto",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 15,
      "name": "Chiron",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 3,
      "name": "Semi Square",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 105,
      "name": "Lilith",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 8,
      "name": "Quincunx",
    },
    "planet1": {
      "id": 1,
      "name": "Moon",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 3,
      "name": "Venus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 4,
      "name": "Mars",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 5,
      "name": "Jupiter",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 3,
      "name": "Semi Square",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 105,
      "name": "Lilith",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 8,
      "name": "Quincunx",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 8,
      "name": "Quincunx",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 4,
      "name": "Mars",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 10,
      "name": "Bi Quintile",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 5,
      "name": "Jupiter",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 9,
      "name": "Quintile",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 4,
      "name": "Mars",
    },
    "planet2": {
      "id": 5,
      "name": "Jupiter",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 9,
      "name": "Quintile",
    },
    "planet1": {
      "id": 4,
      "name": "Mars",
    },
    "planet2": {
      "id": 6,
      "name": "Saturn",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 4,
      "name": "Mars",
    },
    "planet2": {
      "id": 105,
      "name": "Lilith",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 9,
      "name": "Quintile",
    },
    "planet1": {
      "id": 5,
      "name": "Jupiter",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 5,
      "name": "Jupiter",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 4,
      "name": "Sesquiquadrate",
    },
    "planet1": {
      "id": 5,
      "name": "Jupiter",
    },
    "planet2": {
      "id": 9,
      "name": "Pluto",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 4,
      "name": "Sesquiquadrate",
    },
    "planet1": {
      "id": 5,
      "name": "Jupiter",
    },
    "planet2": {
      "id": 15,
      "name": "Chiron",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 5,
      "name": "Jupiter",
    },
    "planet2": {
      "id": 105,
      "name": "Lilith",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 4,
      "name": "Sesquiquadrate",
    },
    "planet1": {
      "id": 5,
      "name": "Jupiter",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 3,
      "name": "Semi Square",
    },
    "planet1": {
      "id": 5,
      "name": "Jupiter",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 8,
      "name": "Quincunx",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 9,
      "name": "Pluto",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 8,
      "name": "Quincunx",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 15,
      "name": "Chiron",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 4,
      "name": "Sesquiquadrate",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 105,
      "name": "Lilith",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 8,
      "name": "Quincunx",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 7,
      "name": "Semi Sextile",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 7,
      "name": "Uranus",
    },
    "planet2": {
      "id": 9,
      "name": "Pluto",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 7,
      "name": "Uranus",
    },
    "planet2": {
      "id": 15,
      "name": "Chiron",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 7,
      "name": "Uranus",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 7,
      "name": "Uranus",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "planet1": {
      "id": 8,
      "name": "Neptune",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "planet1": {
      "id": 8,
      "name": "Neptune",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 8,
      "name": "Neptune",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 8,
      "name": "Neptune",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 8,
      "name": "Neptune",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 8,
      "name": "Neptune",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "planet1": {
      "id": 9,
      "name": "Pluto",
    },
    "planet2": {
      "id": 15,
      "name": "Chiron",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 9,
      "name": "Pluto",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 9,
      "name": "Pluto",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "planet1": {
      "id": 9,
      "name": "Pluto",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 9,
      "name": "Pluto",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "planet1": {
      "id": 9,
      "name": "Pluto",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 9,
      "name": "Pluto",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 15,
      "name": "Chiron",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 15,
      "name": "Chiron",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "planet1": {
      "id": 15,
      "name": "Chiron",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 15,
      "name": "Chiron",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "planet1": {
      "id": 15,
      "name": "Chiron",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 15,
      "name": "Chiron",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "planet1": {
      "id": 103,
      "name": "True North Node",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 103,
      "name": "True North Node",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 103,
      "name": "True North Node",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 103,
      "name": "True North Node",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 103,
      "name": "True North Node",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 104,
      "name": "True South Node",
    },
    "planet2": {
      "id": 100,
      "name": "Ascendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 104,
      "name": "True South Node",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 104,
      "name": "True South Node",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 104,
      "name": "True South Node",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 100,
      "name": "Ascendant",
    },
    "planet2": {
      "id": 109,
      "name": "MidHeaven",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "planet1": {
      "id": 100,
      "name": "Ascendant",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 100,
      "name": "Ascendant",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "planet1": {
      "id": 109,
      "name": "MidHeaven",
    },
    "planet2": {
      "id": 108,
      "name": "Descendant",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "planet1": {
      "id": 109,
      "name": "MidHeaven",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "planet1": {
      "id": 108,
      "name": "Descendant",
    },
    "planet2": {
      "id": 107,
      "name": "Nadir",
    },
    "typeOfAspect": "natal-to-natal",
  },
]
`;

exports[`Valid Call calculateBirthChart with valid parameters 5`] = `
[
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 2,
      "name": "Mercury",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 0,
      "name": "Sun",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 4,
      "name": "Mars",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 5,
      "name": "Jupiter",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 12,
      "name": "Contraparallel",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 2,
      "name": "Mercury",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 12,
      "name": "Contraparallel",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 5,
      "name": "Jupiter",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 12,
      "name": "Contraparallel",
    },
    "planet1": {
      "id": 3,
      "name": "Venus",
    },
    "planet2": {
      "id": 6,
      "name": "Saturn",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 4,
      "name": "Mars",
    },
    "planet2": {
      "id": 5,
      "name": "Jupiter",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 4,
      "name": "Mars",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 12,
      "name": "Contraparallel",
    },
    "planet1": {
      "id": 4,
      "name": "Mars",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 5,
      "name": "Jupiter",
    },
    "planet2": {
      "id": 7,
      "name": "Uranus",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 12,
      "name": "Contraparallel",
    },
    "planet1": {
      "id": 6,
      "name": "Saturn",
    },
    "planet2": {
      "id": 105,
      "name": "Lilith",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 7,
      "name": "Uranus",
    },
    "planet2": {
      "id": 8,
      "name": "Neptune",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 7,
      "name": "Uranus",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 7,
      "name": "Uranus",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 8,
      "name": "Neptune",
    },
    "planet2": {
      "id": 103,
      "name": "True North Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 8,
      "name": "Neptune",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 15,
      "name": "Chiron",
    },
    "planet2": {
      "id": 105,
      "name": "Lilith",
    },
    "typeOfAspect": "natal-to-natal",
  },
  {
    "aspect": {
      "id": 11,
      "name": "Parallel",
    },
    "planet1": {
      "id": 103,
      "name": "True North Node",
    },
    "planet2": {
      "id": 104,
      "name": "True South Node",
    },
    "typeOfAspect": "natal-to-natal",
  },
]
`;
